--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Bagi Saya, personal branding bukan sekadar konten, tapi tentang menunjukkan <b> 
           <h3 style="margin:0">Kontak</h3>
           <div class="divider"></div>
           <div class="contact-list">
-            <a class="btn" href="mailto:andhika@example.com">Email: andhika@example.com</a>
+            <a class="btn" href="mailto:asia.andhika760@gmail.com">Email: andhika@example.com</a>
             <a class="btn" href="https://github.com/andhika" target="_blank">GitHub</a>
             <a class="btn" href="https://linkedin.com/in/andhika" target="_blank">LinkedIn</a>
           </div>
@@ -193,3 +193,4 @@ Bagi Saya, personal branding bukan sekadar konten, tapi tentang menunjukkan <b> 
   <script src="script.js"></script>
 </body>
 </html>
+
